--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,9 @@
   <!-- Page Content -->
   <div class="container">
     <br>
-    
+    <h1><p class="text-center">Your Firstep</p></h1>
+    <p class="lh-base">This website will provide your first step to reducing daily pollution. Here is a survey which you willl choose one choice for each category, and it will ecord your pollition usage in a day. (*if you did not use a waste material, click the far left.) Click the results button to see your score!</p>
+    <br>
     <!-- 첫번쨰줄 시작 -->
     <div class="row">
       <!-- 왼쪽 첫번쨰줄 -->
