--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Sale Link 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Jihu Choi 2021</p>
     </div>
     <!-- /.container -->
   </footer>
